# ChatHistoryAnalyzer

./: .gitignore  .pylintrc  README.md
analysis/: pyproject.toml
analysis/analysis/: messages_class.py
analysis/tests/: test_analysis.py
backend/: README.md  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/operations/: db.py  message.py
backend/src/backend/routes/: analysis.py  chatlog.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  Footer.js  data.js  index.js
frontend/src/routes/: about_us.js  impressum.js  invoice.js
text_processing/: pyproject.toml
text_processing/tests/: test_text_processing.py
