[tool.poetry]
name = "backend"
version = "0.1.0"
description = "API for the chat analyzer"
authors = ["Gitznik <r.offner@gmx.de>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
fastapi = {extras = ["all"], version = "^0.73.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
