[tool.poetry]
name = "backend"
version = "0.1.0"
description = "API for the chat analyzer"
authors = ["Gitznik <r.offner@gmx.de>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.0.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
fastapi = {extras = ["all"], version = "^0.73.0"}
black = "^22.1.0"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
